# MediaMagnet_Bot

./: .gitignore  .gitpod.yml  Dockerfile  README.md  iniciar_bot.py  iniciar_gitpod.py  main.py  pyproject.toml  requirements.txt  subir_mediafire.py  vercel.json
classes/: get_info.py  google_drive.py
db/: KOD_16.json  MandiCoder.json  devmagd.json
modules/: add_buttons.py  ansi.py  auto_upload.py  compress_files.py  database.py  download_files.py  download_files_telegram.py  extract_images.py  extract_info_video.py  functions.py  generate_words.py  global_variables.py  google_drive.py  progres_bar.py  pyrogram_init.py  server.py  show_files.py  upload_files.py  wget.py  youtubedl_mod.py
modules/torrentp/: downloader.py
secret/: client_secret.json  credentials_module.json
src/classes/: file_type.py  get_info.py  google_drive.py
src/modules/: add_buttons.py  ansi.py  auto_upload.py  compress.py  download_files.py  download_files_telegram.py  global_variables.py  progres_bar.py  progress.py  pyrogram_init.py  send_mail.py  server.py  show_files.py  upload_files.py  wget.py  youtubedl_mod.py
src/modules/torrentp/: torrent_downloader.py
templates/: index.html  user.html
tests/: download_playlist.py  test.js  test.py
