[tool.poetry]
name = "mediamagnetbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.11"
pydrive2 = "^1.19.0"    
pyrogram = "^2.0.106"
yt-dlp = "^2023.12.30"
aiohttp = "^3.9.1"
opencv-contrib-python-headless = "^4.9.0.80"
logzero = "^1.7.0"
tgcrypto = "^1.2.5"
user-agent = "^0.1.10"
bs4 = "^0.0.1"
torrentp = "^0.1.6"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
aiohttp-jinja2 = "^1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
